Update hyperlink button

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <br>
                 <p class="desc1"> Electrical Engineering, Universitas Indonesia </p>
                 <ul class="nospace inline pushright" type="none">
-                    <li><a class="button" href="#"> Contact </a></li>
-                    <li><a class="buttoninverse" href="#"> See More </a></li>    
+                    <li><a class="button" href="mailto:adliaulia16@gmail.com"> Contact </a></li>
+                    <li><a class="buttoninverse" href="https://www.linkedin.com/in/adli-a-4b2823ab/"> See More </a></li>    
                 </ul>
             </div>
         </div>
