--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row3_left">
                 <img class="c" src="./assets/Adli.gif" alt="">
             </div>
-            <div class="row3_right"><h3 class="d">@Copyright 2021</h3></div>
+            <div class="row3_right"><h3 class="d">©2021 Adli All rights reserved. </h3></div>
         </div>
 
     </div>
