--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <br>
                 <p class="desc1"> Electrical Engineering, Universitas Indonesia </p>
                 <ul class="nospace inline pushright" type="none">
-                    <li><a class="button" href="mailto:adliaulia16@gmail.com"> Contact </a></li>
+                    <li><a class="button" href="https://mail.google.com/mail/u/0/?fs=1&to=adliaulia16@gmail.com&su=Test&tf=cm"> Contact </a></li>
                     <li><a class="buttoninverse" href="https://www.linkedin.com/in/adli-a-4b2823ab/"> See More </a></li>    
                 </ul>
             </div>
