--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                  <li id="box2" class="b"> Electrical </li>
                  <li id="box2" class="b"> Web Development </li>
                  <li id="box2" class="b"> Data Science </li>
-                 <li id="box2" class="b"> Machine Learning </li>
+                 <li id="box2" class="b machinelearing"> Machine Learning </li>
              </ul>
              
         </div>
