Expertise, icon, imgexp

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Portofolio </title>
+    <title> Adli's Portofolio </title>
     <link rel="stylesheet" type="text/css" href="./style-project.css">
+    <link rel="icon" href="./assets/icon-a.jpg" type="image/x-icon"
 </head>
 <body>
     <div class="homepage">
@@ -41,10 +42,38 @@
         <div class="row2">
              <center><h1 class="expertise"> My Expertise </h1></center>
              <ul class="a">
-                 <li id="box2" class="b"> Electrical </li>
-                 <li id="box2" class="b"> Web Development </li>
-                 <li id="box2" class="b"> Data Science </li>
-                 <li id="box2" class="b machinelearing"> Machine Learning </li>
+                 <li class="b">  
+                    <article>
+                        <img class="imgexp" src="./assets/pcb.png" alt="Electrical">
+                        <h4 class="heading">Electrical</h4>
+                        <p></p>
+                        <footer><a class="button" href="#">see more</a></footer>
+                      </article>
+                 </li>
+                 <li class="b">  
+                    <article>
+                        <img class="imgexp" src="./assets/webdev.png" alt="Machine Learning">
+                        <h4 class="heading">Web Development</h4>
+                        <p></p>
+                        <footer><a class="button" href="#">see more</a></footer>
+                      </article>
+                 </li>
+                 <li class="b">  
+                    <article>
+                        <img class="imgexp" src="./assets/datascience.jpg" alt="Machine Learning">
+                        <h4 class="heading">Data Science</h4>
+                        <p></p>
+                        <footer><a class="button" href="#">see more</a></footer>
+                      </article>
+                 </li>
+                 <li class="b">  
+                    <article>
+                        <img class="imgexp" src="./assets/ML.png" alt="Machine Learning">
+                        <h4 class="heading">Machine Learning</h4>
+                        <p></p>
+                        <footer><a class="button" href="#">see more</a></footer>
+                      </article>
+                 </li>
              </ul>
              
         </div>
