--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Adli's Portofolio </title>
-    <link rel="stylesheet" type="text/css" href="./style-project.css">
+    <link rel="stylesheet" type="text/css" href="./style-project copy.css">
     <link rel="icon" href="./assets/icon-a.jpg" type="image/x-icon"
 </head>
-<body>
-    <div class="homepage">
+
+<body class="homepage">
+    <header class="navbar">
         <div class="row0">
             <div id="logo" class="row0_left">
                 <img class="adli" src="./assets/Adli.gif" alt="Adli">
             </div>
             <div id="mainav" class="row0_right">
                 <ul class="clear" type="none">
-                    <li><a class="nav" href="#"> Home </a></li>
-                    <li><a class="navinverse" href="#"> Project </a></li>
-                    <li><a class="navinverse" href="#"> Skill </a></li>
-                    <li><a class="navinverse" href="#"> Education </a></li>
+                    <li><a class="navv nav" href="#"> Home </a></li>
+                    <li><a class="navv navinverse" href="#"> Project </a></li>
+                    <li><a class="navv navinverse" href="#"> Skill </a></li>
+                    <li><a class="navv navinverse" href="#"> Education </a></li>
                 </ul>
             </div>
         </div>
         <hr width="100%"  padding: 0; " >
+    </header>
+    <!-- ################################################################### -->
+    <main>
         <div class="row1">
             <img id="box1" class="profile" src="./assets/profile.jpg" alt="profile">
             <div class="row1_left">
@@ -40,50 +44,49 @@
             </div>
         </div>
         <div class="row2">
-             <center><h1 class="expertise"> My Expertise </h1></center>
-             <ul class="a">
-                 <li class="b">  
-                    <article>
-                        <img class="imgexp" src="./assets/pcb.png" alt="Electrical">
-                        <h4 class="heading">Electrical</h4>
-                        <p></p>
-                        <footer><a class="button" href="#">see more</a></footer>
-                      </article>
-                 </li>
-                 <li class="b">  
-                    <article>
-                        <img class="imgexp" src="./assets/webdev.png" alt="Machine Learning">
-                        <h4 class="heading">Web Development</h4>
-                        <p></p>
-                        <footer><a class="button" href="#">see more</a></footer>
-                      </article>
-                 </li>
-                 <li class="b">  
-                    <article>
-                        <img class="imgexp" src="./assets/datascience.jpg" alt="Machine Learning">
-                        <h4 class="heading">Data Science</h4>
-                        <p></p>
-                        <footer><a class="button" href="#">see more</a></footer>
-                      </article>
-                 </li>
-                 <li class="b">  
-                    <article>
-                        <img class="imgexp" src="./assets/ML.png" alt="Machine Learning">
-                        <h4 class="heading">Machine Learning</h4>
-                        <p></p>
-                        <footer><a class="button" href="#">see more</a></footer>
-                      </article>
-                 </li>
-             </ul>
-             
+            <center><h1 class="expertise"> My Expertise </h1></center>
+            <ul class="a">
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./assets/pcb.png" alt="Electrical">
+                       <h4 class="heading">Electrical</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./assets/webdev.png" alt="Machine Learning">
+                       <h4 class="heading">Web Development</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./assets/datascience.jpg" alt="Machine Learning">
+                       <h4 class="heading">Data Science</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./assets/ML.png" alt="Machine Learning">
+                       <h4 class="heading">Machine Learning</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+            </ul>
+       </div>
+    </main>   
+    <!-- ################################################################### -->
+    <footer id="footer" class="row3">
+        <div class="row3_left">
+            <img class="c" src="./assets/Adli.gif" alt="">
         </div>
-        <div class="row3">
-            <div class="row3_left">
-                <img class="c" src="./assets/Adli.gif" alt="">
-            </div>
-            <div class="row3_right"><h3 class="d">©2021 Adli All rights reserved. </h3></div>
-        </div>
-
-    </div>
+        <div class="row3_right"><h3 class="d">©2021 Adli All rights reserved. </h3></div>
+    </footer>
 </body>
 </html>
