--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Adli's Portofolio </title>
-    <link rel="stylesheet" type="text/css" href="./style-project copy.css">
+    <link rel="stylesheet" type="text/css" href="./style-project.css">
     <link rel="icon" href="./assets/icon-a.jpg" type="image/x-icon"
 </head>
 
