--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             </div>
             <div id="mainav" class="row0_right">
                 <ul class="clear" type="none">
-                    <li><a class="navv nav" href="#"> Home </a></li>
-                    <li><a class="navv navinverse" href="#"> Project </a></li>
-                    <li><a class="navv navinverse" href="#"> Skill </a></li>
-                    <li><a class="navv navinverse" href="#"> Education </a></li>
+                    <li><a class="nav" href="#"> Home </a></li>
+                    <li><a class="navinverse" href="#"> Project </a></li>
+                    <li><a class="navinverse" href="#"> Skill </a></li>
+                    <li><a class="navinverse" href="#"> Education </a></li>
                 </ul>
             </div>
         </div>
