--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="icon" href="./assets/icon-a.jpg" type="image/x-icon"
 </head>
 
-<body class="homepage">
+<body class="home page">
     <header class="navbar">
-        <div class="row0">
+        <div class=" wrapper row0">
             <div id="logo" class="row0_left">
                 <img class="adli" src="./assets/Adli.gif" alt="Adli">
             </div>
@@ -27,7 +27,7 @@
     </header>
     <!-- ################################################################### -->
     <main>
-        <div class="row1">
+        <div class="wrapper row1">
             <div class="row1_left">
                 <img id="box1" class="profile" src="./assets/profile.jpg" alt="profile">
                 <!--  -->
@@ -43,7 +43,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row2">
+        <div class="wrapper row2">
             <center><h1 class="expertise"> My Expertise </h1></center>
             <ul class="a">
                 <li class="b">  
@@ -51,7 +51,7 @@
                        <img class="imgexp" src="./assets/pcb.png" alt="Electrical">
                        <h4 class="heading">Electrical</h4>
                        <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
+                       <footer><a class="button" href="./pages/electrical.html">see more</a></footer>
                      </article>
                 </li>
                 <li class="b">  
@@ -59,7 +59,7 @@
                        <img class="imgexp" src="./assets/webdev.png" alt="Machine Learning">
                        <h4 class="heading">Web Development</h4>
                        <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
+                       <footer><a class="button" href="./pages/webdevelopment.html">see more</a></footer>
                      </article>
                 </li>
                 <li class="b">  
@@ -67,7 +67,7 @@
                        <img class="imgexp" src="./assets/datascience.jpg" alt="Machine Learning">
                        <h4 class="heading">Data Science</h4>
                        <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
+                       <footer><a class="button" href="./pages/datascience.html">see more</a></footer>
                      </article>
                 </li>
                 <li class="b">  
@@ -75,18 +75,18 @@
                        <img class="imgexp" src="./assets/ML.png" alt="Machine Learning">
                        <h4 class="heading">Machine Learning</h4>
                        <p></p>
-                       <footer><a class="button" href="#">see more</a></footer>
+                       <footer><a class="button" href="./pages/machinelearning.html">see more</a></footer>
                      </article>
                 </li>
             </ul>
        </div>
     </main>   
     <!-- ################################################################### -->
-    <footer id="footer" class="row3">
+    <footer id="footer" class="wrapper row3">
         <div class="row3_left">
             <img class="c" src="./assets/Adli.gif" alt="">
         </div>
-        <div class="row3_right"><h3 class="d">©2021 Adli All rights reserved. </h3></div>
+        <div class="row3_right"><h3 class="d">©2021 - All rights reserved - Adli's Portofolio. </h3></div>
     </footer>
 </body>
 </html>
