--- a/pages/electrical.html
+++ b/pages/electrical.html
@@ -24,18 +24,66 @@
         </div>
         <hr width="100%"  padding: 0; " >
     </header>
+    <!-- ######################################################################## -->
     <main>
         <div class="wrapper row1">
             <div class="row1_left">
-
+                <img id="ECHA" class="img ptr" src="./electric-asset/ECHA.jpg" title="Echa">
+                <img id="ROV" class="img ptr" src="./electric-asset/ROV.jpg" title="ROV">
+                <img id="SOLPAN" class="img lands" src="./electric-asset/SolarPanel.jpg" title="SOLPAN">
             </div>
             <div class="row1_right">
-                <h2>My Electrical Skills</h2>
-                <p>My Electrical Skills</p>
+                <article>   
+                    <h2 class="heading_1">My Electrical Skills</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <ul class="list_skill">    
+                        <li> Electrical Board Design </li>
+                        <li> PCB Schematics & Layout Design </li>
+                        <li> Arduino </li>
+                        <li> Electrical Installations and Schematics </li>
+                    </ul>
+                </article>
             </div>
         </div>
-        
+        <div class="wrapper row2">
+            <center><h1 class="expertise"> My Project </h1></center>
+            <ul class="a">
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/ECHA-2.jpg" alt="Electrical">
+                       <h4 class="heading">Elektro Charity</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/Robot.jpg" alt="Machine Learning">
+                       <h4 class="heading">Line Follower</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/GulaDarah.jpg" alt="Machine Learning">
+                       <h4 class="heading">Glucometer</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/SolarPanel-2.jpg" alt="SOLPAN">
+                       <h4 class="heading">Solar Panel</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+            </ul>
+       </div>
     </main>
+    <!-- ######################################################################## -->
     <footer id="footer" class="wrapper row3">
         <div class="row3_left">
             <img class="c" src="../assets/Adli.gif" alt="">
