--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <p class="desc1"> Electrical Engineering, Universitas Indonesia </p>
                 <ul class="nospace inline pushright" type="none">
                     <li><a class="button" href="https://mail.google.com/mail/u/0/?fs=1&to=adliaulia16@gmail.com&su=Test&tf=cm"> Contact </a></li>
-                    <li><a class="buttoninverse" href="https://www.linkedin.com/in/adli-a-4b2823ab/"> See More </a></li>    
+                    <li><a class="buttoninverse" href="https://www.linkedin.com/in/adli-a-4b2823ab/"> LinkedIn </a></li>    
                 </ul>
             </div>
         </div>
         <div class="wrapper row2">
-            <center><h1 class="expertise"> My Expertise </h1></center>
+            <center><h1 class="expertise"> My Skill </h1></center>
             <ul class="a">
                 <li class="b">  
                    <article>
