--- a/pages/electrical.html
+++ b/pages/electrical.html
@@ -37,10 +37,11 @@
                     <h2 class="heading_1">My Electrical Skills</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <ul class="list_skill">    
-                        <li> Electrical Board Design </li>
+                        <li> Electrical Board Design for Vehicle </li>
+                        <li> Electrical Installations and Schematics </li>
                         <li> PCB Schematics & Layout Design </li>
                         <li> Arduino </li>
-                        <li> Electrical Installations and Schematics </li>
+                        
                     </ul>
                 </article>
             </div>
@@ -51,7 +52,7 @@
                 <li class="b">  
                    <article>
                        <img class="imgexp" src="./electric-asset/ECHA-2.jpg" alt="Electrical">
-                       <h4 class="heading">Elektro Charity</h4>
+                       <h4 class="heading"> Elektro Charity </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
@@ -59,7 +60,7 @@
                 <li class="b">  
                    <article>
                        <img class="imgexp" src="./electric-asset/Robot.jpg" alt="Machine Learning">
-                       <h4 class="heading">Line Follower</h4>
+                       <h4 class="heading"> Line Follower </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
@@ -67,7 +68,7 @@
                 <li class="b">  
                    <article>
                        <img class="imgexp" src="./electric-asset/GulaDarah.jpg" alt="Machine Learning">
-                       <h4 class="heading">Glucometer</h4>
+                       <h4 class="heading"> Glucometer </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
@@ -75,7 +76,75 @@
                 <li class="b">  
                    <article>
                        <img class="imgexp" src="./electric-asset/SolarPanel-2.jpg" alt="SOLPAN">
-                       <h4 class="heading">Solar Panel</h4>
+                       <h4 class="heading"> SolPan System </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+            </ul>
+            <ul class="a">
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/ROV.jpg" alt="Electrical">
+                       <h4 class="heading"> ROV </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/ASV.jpg" alt="Machine Learning">
+                       <h4 class="heading"> ASV </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/SolarTracker.jpg" alt="Machine Learning">
+                       <h4 class="heading"> Solar Tracker </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/InverterinoPSW.jpg" alt="SOLPAN">
+                       <h4 class="heading">Inverterino PSW</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+            </ul>
+            <ul class="a">
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/Plant Incubator.jpg" alt="Plant Incubator">
+                       <h4 class="heading"> Plant Incubator </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/PCBSimulation.jpg" alt="PCB Simulation">
+                       <h4 class="heading"> PCB Simulation </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/" alt="NaN">
+                       <h4 class="heading"> Kwh Meter </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgexp" src="./electric-asset/" alt="NaN">
+                       <h4 class="heading"> Smart Switch </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
