--- a/pages/electrical.html
+++ b/pages/electrical.html
@@ -47,11 +47,11 @@
             </div>
         </div>
         <div class="wrapper row2">
-            <center><h1 class="expertise"> My Project </h1></center>
+            <center><h1 class="project"> My Project </h1></center>
             <ul class="a">
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/ECHA-2.jpg" alt="Electrical">
+                       <img class="imgproj" src="./electric-asset/ECHA-2.jpg" alt="Elektro Charity">
                        <h4 class="heading"> Elektro Charity </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -59,7 +59,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/Robot.jpg" alt="Machine Learning">
+                       <img class="imgproj" src="./electric-asset/Robot.jpg" alt="Line Follower">
                        <h4 class="heading"> Line Follower </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -67,7 +67,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/GulaDarah.jpg" alt="Machine Learning">
+                       <img class="imgproj" src="./electric-asset/GulaDarah.jpg" alt="Glucometer">
                        <h4 class="heading"> Glucometer </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -75,7 +75,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/SolarPanel-2.jpg" alt="SOLPAN">
+                       <img class="imgproj" src="./electric-asset/SolarPanel-2.jpg" alt="SolPan System">
                        <h4 class="heading"> SolPan System </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -85,7 +85,7 @@
             <ul class="a">
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/ROV.jpg" alt="Electrical">
+                       <img class="imgproj" src="./electric-asset/ROV.jpg" alt="ROV">
                        <h4 class="heading"> ROV </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -93,7 +93,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/ASV.jpg" alt="Machine Learning">
+                       <img class="imgproj" src="./electric-asset/ASV.jpg" alt="ASV">
                        <h4 class="heading"> ASV </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -101,7 +101,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/SolarTracker.jpg" alt="Machine Learning">
+                       <img class="imgproj" src="./electric-asset/SolarTracker.jpg" alt="Solar Tracker">
                        <h4 class="heading"> Solar Tracker </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -109,7 +109,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/InverterinoPSW.jpg" alt="SOLPAN">
+                       <img class="imgproj" src="./electric-asset/InverterinoPSW.jpg" alt="Inverterino PSW">
                        <h4 class="heading">Inverterino PSW</h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -119,7 +119,7 @@
             <ul class="a">
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/Plant Incubator.jpg" alt="Plant Incubator">
+                       <img class="imgproj" src="./electric-asset/Plant Incubator.jpg" alt="Plant Incubator">
                        <h4 class="heading"> Plant Incubator </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -127,7 +127,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/PCBSimulation.jpg" alt="PCB Simulation">
+                       <img class="imgproj" src="./electric-asset/PCBSimulation.jpg" alt="PCB Simulation">
                        <h4 class="heading"> PCB Simulation </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -135,7 +135,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/" alt="NaN">
+                       <img class="imgproj" src="./electric-asset/" alt="NaN">
                        <h4 class="heading"> Kwh Meter </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
@@ -143,7 +143,7 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgexp" src="./electric-asset/" alt="NaN">
+                       <img class="imgproj" src="./electric-asset/" alt="NaN">
                        <h4 class="heading"> Smart Switch </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
