--- a/pages/machinelearning.html
+++ b/pages/machinelearning.html
@@ -15,18 +15,149 @@
             </div>
             <div id="mainav" class="row0_right">
                 <ul class="clear" type="none">
-                    <li><a class="nav" href="#"> Home </a></li>
-                    <li><a class="navinverse" href="#"> Project </a></li>
+                    <li><a class="nav" href="../index.html"> Home </a></li>
                     <li><a class="navinverse" href="#"> Skill </a></li>
+                    <li><a class="navinverse" href="#"> Project </a></li>
                     <li><a class="navinverse" href="#"> Education </a></li>
                 </ul>
             </div>
         </div>
         <hr width="100%"  padding: 0; " >
     </header>
+    <!-- ######################################################################## -->
     <main>
-        <p>My Machine Learning Skills</p>
+        <div class="wrapper row1">
+            <div class="row1_left">
+                <img id="ECHA" class="img ptr" src="./electric-asset/ECHA.jpg" title="Echa">
+                <img id="ROV" class="img ptr" src="./electric-asset/ROV.jpg" title="ROV">
+                <img id="SOLPAN" class="img lands" src="./electric-asset/SolarPanel.jpg" title="SOLPAN">
+            </div>
+            <div class="row1_right">
+                <article>   
+                    <h2 class="heading_1">My Electrical Skills</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <ul class="list_skill">    
+                        <li> Electrical Board Design for Vehicle </li>
+                        <li> Electrical Installations and Schematics </li>
+                        <li> PCB Schematics & Layout Design </li>
+                        <li> Arduino </li>
+                        
+                    </ul>
+                </article>
+            </div>
+        </div>
+        <div class="wrapper row2">
+            <center><h1 class="project"> My Project </h1></center>
+            <ul class="a">
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/ECHA-2.jpg" alt="Elektro Charity">
+                       <h4 class="heading"> Elektro Charity </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/Robot.jpg" alt="Line Follower">
+                       <h4 class="heading"> Line Follower </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/GulaDarah.jpg" alt="Glucometer">
+                       <h4 class="heading"> Glucometer </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/SolarPanel-2.jpg" alt="SolPan System">
+                       <h4 class="heading"> SolPan System </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+            </ul>
+            <ul class="a">
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/ROV.jpg" alt="ROV">
+                       <h4 class="heading"> ROV </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/ASV.jpg" alt="ASV">
+                       <h4 class="heading"> ASV </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/SolarTracker.jpg" alt="Solar Tracker">
+                       <h4 class="heading"> Solar Tracker </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/InverterinoPSW.jpg" alt="Inverterino PSW">
+                       <h4 class="heading">Inverterino PSW</h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+            </ul>
+            <ul class="a">
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/Plant Incubator.jpg" alt="Plant Incubator">
+                       <h4 class="heading"> Plant Incubator </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/PCBSimulation.jpg" alt="PCB Simulation">
+                       <h4 class="heading"> PCB Simulation </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/" alt="NaN">
+                       <h4 class="heading"> Kwh Meter </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+                <li class="b">  
+                   <article>
+                       <img class="imgproj" src="./electric-asset/" alt="NaN">
+                       <h4 class="heading"> Smart Switch </h4>
+                       <p></p>
+                       <footer><a class="button" href="#">see more</a></footer>
+                     </article>
+                </li>
+            </ul>
+       </div>
     </main>
-    
+    <!-- ######################################################################## -->
+    <footer id="footer" class="wrapper row3">
+        <div class="row3_left">
+            <img class="c" src="../assets/Adli.gif" alt="">
+        </div>
+        <div class="row3_right"><h3 class="d">©2021 - All rights reserved - Adli's Portofolio. </h3></div>
+    </footer>
 </body>
 </html>
