--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div id="mainav" class="row0_right">
                 <ul class="clear" type="none">
                     <li><a class="nav" href="#"> Home </a></li>
+                    <li><a class="navinverse" href="#row2"> Skill </a></li>
                     <li><a class="navinverse" href="#"> Project </a></li>
-                    <li><a class="navinverse" href="#"> Skill </a></li>
                     <li><a class="navinverse" href="#"> Education </a></li>
                 </ul>
             </div>
@@ -43,7 +43,7 @@
                 </ul>
             </div>
         </div>
-        <div class="wrapper row2">
+        <div id="row2" class="wrapper row2">
             <center><h1 class="expertise"> My Skill </h1></center>
             <ul class="a">
                 <li class="b">  
