--- a/pages/electrical.html
+++ b/pages/electrical.html
@@ -135,15 +135,15 @@
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgproj" src="./electric-asset/" alt="NaN">
-                       <h4 class="heading"> Kwh Meter </h4>
+                       <img class="imgproj" src="./electric-asset/KwhMeter.jpg" alt="SmartKwhMeter">
+                       <h4 class="heading"> SmartKwhMeter </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
                      </article>
                 </li>
                 <li class="b">  
                    <article>
-                       <img class="imgproj" src="./electric-asset/" alt="NaN">
+                       <img class="imgproj" src="./electric-asset/SmartSwitch.jpeg" alt="Smart Switch">
                        <h4 class="heading"> Smart Switch </h4>
                        <p></p>
                        <footer><a class="button" href="#">see more</a></footer>
